--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/lab": "^6.0.0-beta.20",
     "@mui/material": "^6.2.1",
     "cra-template": "1.2.0",
+    "mermaid": "^11.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
