--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
   "domain": "flowmaxer.eu.auth0.com",
   "clientId": "gKpFhcYt8T7dburrl0qgN3oipdxe9y9O",
-  "audience": "http://localhost/5000/api"
+  "audience": "https://flowmaxer.ai/engine"
 }
