--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@mui/lab": "^6.0.0-beta.20",
     "@mui/material": "^6.2.1",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "history": "^5.3.0",
     "mermaid": "^11.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
