--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/lab": "^6.0.0-beta.20",
     "@mui/material": "^6.2.1",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
