--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,5 @@
 {
   "domain": "flowmaxer.eu.auth0.com",
   "clientId": "gKpFhcYt8T7dburrl0qgN3oipdxe9y9O",
-  "audience": "https://flowmaxer.ai/engine",
-  "apiBaseUrl": "http://localhost:5000"
+  "audience": "https://flowmaxer.ai/engine"
 }
