--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.1.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4"
   },
