--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.1.0",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4"
   },
