--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,4 @@
 REACT_APP_API_URL=http://localhost:5000 
+REACT_APP_AUTH0_DOMAIN=flowmaxer.eu.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=gKpFhcYt8T7dburrl0qgN3oipdxe9y9O
+REACT_APP_AUTH0_AUDIENCE=https://flowmaxer.ai/engine
