join existing tenant complete

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,10 @@
+# REACT_APP_API_URL=http://localhost:5000 
+# REACT_APP_AUTH0_DOMAIN=xiansai-prod.eu.auth0.com
+# REACT_APP_AUTH0_CLIENT_ID=KsFoY3k532yh7rIgCQZzigeoPfwAlsd7
+# REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
+
+
+
 REACT_APP_API_URL=http://localhost:5000 
 REACT_APP_AUTH0_DOMAIN=flowmaxer.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=gKpFhcYt8T7dburrl0qgN3oipdxe9y9O
