--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,8 @@ REACT_APP_API_URL=http://localhost:5000
 REACT_APP_AUTH0_DOMAIN=flowmaxer.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=gKpFhcYt8T7dburrl0qgN3oipdxe9y9O
 REACT_APP_AUTH0_AUDIENCE=https://flowmaxer.ai/engine
+
+# REACT_APP_API_URL=https://xiansai-server.azurewebsites.net 
+# REACT_APP_AUTH0_DOMAIN=flowmaxer.eu.auth0.com
+# REACT_APP_AUTH0_CLIENT_ID=gKpFhcYt8T7dburrl0qgN3oipdxe9y9O
+# REACT_APP_AUTH0_AUDIENCE=https://flowmaxer.ai/engine
