--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,4 @@
-# REACT_APP_API_URL=https://xiansai-server.azurewebsites.net 
-# REACT_APP_AUTH0_DOMAIN=xiansai.eu.auth0.com
-# REACT_APP_AUTH0_CLIENT_ID=b1GXSIs4u9OcwKdsKlWeh0Jmdhqw18nO
-# REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
-
-
-REACT_APP_API_URL=https://xiansai-server.azurewebsites.net 
-REACT_APP_AUTH0_DOMAIN=flowmaxer.eu.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=gKpFhcYt8T7dburrl0qgN3oipdxe9y9O
-REACT_APP_AUTH0_AUDIENCE=https://flowmaxer.ai/engine
+REACT_APP_API_URL=https://api.xians.ai
+REACT_APP_AUTH0_DOMAIN=xiansai-prod.eu.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=flhqnqUS0pTlLwhqOGZtHf5VEmWBJ6gh
+REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
