Set server to local to troubleshoot

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://xiansai-server-staging.azurewebsites.net
+REACT_APP_API_URL=http://localhost:5000
 REACT_APP_AUTH0_DOMAIN=xiansai.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=b1GXSIs4u9OcwKdsKlWeh0Jmdhqw18nO
 REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
