--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/history": "^4.7.11"
   }
 }
