--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/lab": "^6.0.0-beta.20",
     "@mui/material": "^6.2.1",
+    "axios": "^1.9.0",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "history": "^5.3.0",
