Update environment variables for Parkly AI and modify CI/CD workflow branch

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,6 @@
-REACT_APP_AUTH_PROVIDER=auth0 
-REACT_APP_API_URL=https://api.xians.ai
-REACT_APP_AUTH0_DOMAIN=xiansai-prod.eu.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=flhqnqUS0pTlLwhqOGZtHf5VEmWBJ6gh
-REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
-REACT_APP_ENTRA_ID_CLIENT_ID=your_client_id
-REACT_APP_ENTRA_ID_AUTHORITY=https://login.microsoftonline.com/your_tenant_id
-REACT_APP_ENTRA_ID_SCOPES=openid,profile,email
+REACT_APP_AUTH_PROVIDER=entraId
+REACT_APP_API_URL=https://parklyai-server-dev.azurewebsites.net/
+REACT_APP_ENTRA_ID_CLIENT_ID=f25932d1-413f-49b5-891c-0f331645caa1
+REACT_APP_ENTRA_ID_AUTHORITY=https://login-dev.parkly.no/login-dev.parkly.no/B2C_1A_SIGNUP_SIGNIN_AI
+REACT_APP_ENTRA_ID_SCOPES=openid, profile, offline_access, https://b2cparklyidpdev.onmicrosoft.com/parkly-ai/api/read
+REACT_APP_ENTRA_ID_KNOWN_AUTHORITIES=login-dev.parkly.no
