Update API URL in production environment configuration for Parkly AI

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 REACT_APP_AUTH_PROVIDER=entraId
-REACT_APP_API_URL=https://parklyai-server-dev.azurewebsites.net/
+REACT_APP_API_URL=https://parklyai-server-dev.azurewebsites.net
 REACT_APP_ENTRA_ID_CLIENT_ID=f25932d1-413f-49b5-891c-0f331645caa1
 REACT_APP_ENTRA_ID_AUTHORITY=https://login-dev.parkly.no/login-dev.parkly.no/B2C_1A_SIGNUP_SIGNIN_AI
 REACT_APP_ENTRA_ID_SCOPES=openid, profile, offline_access, https://b2cparklyidpdev.onmicrosoft.com/parkly-ai/api/read
