--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 REACT_APP_AUTH_PROVIDER=auth0 
-REACT_APP_API_URL=https://xiansai-server-staging.azurewebsites.net/
+REACT_APP_API_URL=https://xiansai-server-staging.azurewebsites.net
 REACT_APP_AUTH0_DOMAIN=xiansai-prod.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=flhqnqUS0pTlLwhqOGZtHf5VEmWBJ6gh
 REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
