--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "history": "^5.3.0",
+    "keycloak-js": "^26.2.0",
     "mermaid": "^11.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
