XIans UAT ci/cd pipeline

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 REACT_APP_AUTH_PROVIDER=auth0 
-REACT_APP_API_URL=https://api.xians.ai
-REACT_APP_AUTH0_DOMAIN=xiansai-prod.eu.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=flhqnqUS0pTlLwhqOGZtHf5VEmWBJ6gh
+REACT_APP_API_URL=https://xiansai-server-staging.azurewebsites.net
+REACT_APP_AUTH0_DOMAIN=xiansai.eu.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=b1GXSIs4u9OcwKdsKlWeh0Jmdhqw18nO
 REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
 REACT_APP_ENTRA_ID_CLIENT_ID=your_client_id
 REACT_APP_ENTRA_ID_AUTHORITY=https://login.microsoftonline.com/your_tenant_id
