--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 REACT_APP_AUTH_PROVIDER=auth0 
-REACT_APP_API_URL=https://api.xians.ai
+REACT_APP_API_URL=https://app-qib-ai-dev-server.azurewebsites.net/
 REACT_APP_AUTH0_DOMAIN=xiansai.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=b1GXSIs4u9OcwKdsKlWeh0Jmdhqw18nO
 REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
