--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,8 @@
-REACT_APP_AUTH_PROVIDER=entraId
-REACT_APP_API_URL=http://localhost:5000
-REACT_APP_ENTRA_ID_CLIENT_ID=23fd2d58-219d-41d6-b7ec-42191ced003c
-REACT_APP_ENTRA_ID_AUTHORITY=https://login.microsoftonline.com/consumers/
-REACT_APP_ENTRA_ID_SCOPES=openid, profile, offline_access, 
-REACT_APP_ENTRA_ID_KNOWN_AUTHORITIES=login.microsoftonline.com
+REACT_APP_AUTH_PROVIDER=auth0 
+REACT_APP_API_URL=http://localhost:5000 
+REACT_APP_AUTH0_DOMAIN=xiansai-prod.eu.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=flhqnqUS0pTlLwhqOGZtHf5VEmWBJ6gh
+REACT_APP_AUTH0_AUDIENCE=https://xians.ai/api
+REACT_APP_ENTRA_ID_CLIENT_ID=your_client_id
+REACT_APP_ENTRA_ID_AUTHORITY=https://login.microsoftonline.com/your_tenant_id
+REACT_APP_ENTRA_ID_SCOPES=openid,profile,email
