Refactor Docker configuration and scripts for improved environment handling
- Update .dockerignore and .gitignore to simplify environment file exclusions
- Remove outdated docker-build.sh and docker-publish.sh scripts, consolidating functionality into a single docker-build-publish.sh script
- Revise README and documentation to reflect changes in Docker build and publish processes, emphasizing unified script usage and multi-platform support

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,10 +8,10 @@ yarn-error.log*
 build
 
 # Development files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+.env.development
+.env.staging
+.env.production
 
 # IDE files
 .vscode
