--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 .env
-
+.env.production
+.env.development
+.env.staging
 
 # dependencies
 /node_modules
@@ -16,10 +18,6 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
