--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "react-toastify": "^11.0.5",
     "web-vitals": "^5.0.3"
   },
+  "overrides": {
+    "refractor": {
+      "prismjs": "^1.30.0"
+    }
+  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
