--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,20 +1,35 @@
-# Production-ready Dockerfile for DockerHub
+# Production-optimized Dockerfile for DockerHub
 # Multi-stage build for XiansAi UI (React Application)
 
-# Build stage
-FROM --platform=$BUILDPLATFORM node:20-alpine AS build
+# syntax=docker/dockerfile:1
+FROM --platform=$BUILDPLATFORM node:20-alpine AS dependencies
 ARG BUILDPLATFORM
 ARG TARGETARCH
 WORKDIR /app
 
-# Install dependencies for native modules compilation
-RUN apk add --no-cache python3 make g++ && ln -sf python3 /usr/bin/python
+# Install only essential native compilation dependencies if needed
+# Remove python3, make, g++ if your project doesn't require native modules
+RUN apk add --no-cache --virtual .build-deps python3 make g++ && ln -sf python3 /usr/bin/python
 
-# Copy package files and install dependencies
+# Copy package files
 COPY package*.json ./
-RUN npm ci && npm cache clean --force
 
-# Copy source code and build the application
+# Install dependencies with cache mount for faster rebuilds
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci --prefer-offline --no-audit
+
+# Remove build dependencies to reduce image size
+RUN apk del .build-deps
+
+# Build stage
+FROM --platform=$BUILDPLATFORM node:20-alpine AS build
+WORKDIR /app
+
+# Copy dependencies from previous stage
+COPY --from=dependencies /app/node_modules ./node_modules
+COPY --from=dependencies /app/package*.json ./
+
+# Copy source code
 COPY . .
 
 # Build the React application for production
