--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "react-toastify": "^11.0.5",
     "web-vitals": "^5.0.3"
   },
+  "overrides": {
+    "@braintree/sanitize-url": "7.0.2"
+  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
