--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "react-toastify": "^11.0.5",
     "web-vitals": "^5.0.3"
   },
+  "overrides": {
+    "workbox-build": {
+      "rollup": "^3.29.5"
+    }
+  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
