--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 .env
-.env.production
-.env.development
-.env.staging
+.env.*
+!.env.example
+
 
 # dependencies
 /node_modules
@@ -22,8 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.env.development
-.env.production
-.env.staging
 .nvmrc
-.env.parkly
