--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "nth-check": "^2.1.1",
     "postcss": "8.4.31",
+    "webpack-dev-server": "^5.2.2",
     "@rollup/plugin-babel": {
       "rollup": "^2.0.0"
     },
