--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "keycloak-js": "^26.2.0",
     "mermaid": "^11.6.0",
     "monaco-editor": "^0.52.2",
+    "oidc-client-ts": "^3.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
