--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,14 @@ REACT_APP_AUTH0_CLIENT_ID=your-auth0-client-id
 REACT_APP_AUTH0_AUDIENCE=https://your-api-audience
 REACT_APP_AUTH0_ORGANIZATION_CLAIM=https://xians.ai/tenants
 
+#Github SSO Configuration
+# REACT_APP_AUTH_PROVIDER=github
+# REACT_APP_API_BASE_URL=http://localhost:7184
+# REACT_APP_GITHUB_CLIENT_ID=Ov23liAEl6cGvtrDjVSO
+# REACT_APP_GITHUB_AUTH_URL=https://github.com/login/oauth/authorize
+# REACT_APP_GITHUB_REDIRECT_URI=http://localhost:3000/callback
+# REACT_APP_GITHUB_SCOPE=read:user user:email
+
 # Entra ID Configuration (when REACT_APP_AUTH_PROVIDER=entraId)
 # REACT_APP_ENTRA_ID_CLIENT_ID=your-entra-id-client-id
 # REACT_APP_ENTRA_ID_AUTHORITY=https://login.microsoftonline.com/your-tenant-id
