--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ REACT_APP_API_URL=http://localhost:5000
 # =============================================================================
 # Authentication Configuration
 # =============================================================================
-# Authentication provider: 'auth0' or 'entraId'
+# Authentication provider: 'auth0', 'entraId', 'keycloak', 'oidc', or 'github'
 REACT_APP_AUTH_PROVIDER=auth0
 
 # Auth0 Configuration (when REACT_APP_AUTH_PROVIDER=auth0)
@@ -26,10 +26,23 @@ REACT_APP_AUTH0_ORGANIZATION_CLAIM=https://xians.ai/tenants
 # REACT_APP_ENTRA_ID_ORGANIZATION_CLAIM=https://login-dev.parkly.no/tenants
 # REACT_APP_ENTRA_ID_KNOWN_AUTHORITIES=https://login.microsoftonline.com/your-tenant-id
 
-# Keycloak Configuration
+# Keycloak Configuration (when REACT_APP_AUTH_PROVIDER=keycloak)
 # REACT_APP_KEYCLOAK_URL=http://localhost:18080/
 # REACT_APP_KEYCLOAK_REALM=xianAI
 # REACT_APP_KEYCLOAK_CLIENT_ID=xianAI.UI
+
+# OIDC Configuration (when REACT_APP_AUTH_PROVIDER=oidc)
+# REACT_APP_OIDC_AUTHORITY=https://your-oidc-provider.com
+# REACT_APP_OIDC_CLIENT_ID=your-oidc-client-id
+# REACT_APP_OIDC_SCOPES=openid profile email
+# REACT_APP_OIDC_AUDIENCE=your-api-audience
+# REACT_APP_OIDC_ORGANIZATION_CLAIM=organizations
+
+# GitHub Configuration (when REACT_APP_AUTH_PROVIDER=github)
+# REACT_APP_GITHUB_CLIENT_ID=your-github-oauth-app-client-id
+# REACT_APP_GITHUB_REDIRECT_URI=http://localhost:3000/callback
+# REACT_APP_GITHUB_SCOPES=read:user user:email
+# REACT_APP_GITHUB_ORGANIZATION_CLAIM=organizations
 
 # =============================================================================
 # Module Configuration
