--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@
 # =============================================================================
 # Base URL for the XiansAi Server API
 REACT_APP_API_URL=http://localhost:5000
+REACT_APP_NAME=Agentri.ai
 
 # =============================================================================
 # Authentication Configuration
