--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^5.0.3"
   },
   "overrides": {
