--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/history": "^4.7.11",
+    "ajv": "^8.17.1",
     "compression-webpack-plugin": "^10.0.0",
     "dotenv-cli": "^8.0.0",
     "terser-webpack-plugin": "^5.3.14",
