--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
-    "@monaco-editor/react": "^4.7.0 ",
+    "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.1",
@@ -81,6 +81,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/history": "^4.7.11",
+    "ajv": "^8.17.1",
     "compression-webpack-plugin": "^10.0.0",
     "dotenv-cli": "^8.0.0",
     "terser-webpack-plugin": "^5.3.14",
