--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "@auth0/auth0-spa-js": "^2.11.3",
     "@azure/msal-browser": "^4.12.0",
     "@azure/msal-react": "^3.0.12",
     "@emotion/react": "^11.14.0",
